# cbs-sports-api

./: LICENSE  README.md  bracket.py  pyproject.toml
.github/workflows/: publish.yml
src/: cbs_requests.py  entry.py  matchup.py  pool.py  team.py
src/cbs_sports_api/: __init__.py  bracket.py  cbs_requests.py  league.py
