[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "cbs-sports-api"
version = "0.1.1"
authors = [
  { name="John Diebold", email="cbs.sports.api@gmail.com" },
]
description = "A package to extract CBS Sports fantasy league data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/JohnDiebold/cbs-sports-api"
Issues = "https://github.com/JohnDiebold/cbs-sports-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cbs_sports_api"]

[tool.hatch.build.sources]
cbs_sports_api = "src/cbs_sports_api"